# momms

./: .gitignore  Cargo.toml  Makefile  NOTES  README.md  build.rs
results/: experiment_ab_algorithm_initilal_impl_2017-09-20-14-14  experiment_ab_algorithm_with_bc_kernel-2017-09-25-12-15  experiment_bc_chained_machine_under_load_2017-09-10-06-04  experiment_bc_l3c_to_l3b_vs_goto_2017-09-10-21-39  experiment_bc_l3c_to_l3b_vs_goto_typical_settings-2017-09-20-14-40  experiment_gemm3_very_narrow_matrix_2017-09-20-12-31  memory_usage.py  percent_change_script.sh  plot_experiment.py  plot_experiment_memory.py  plot_multi_shape_experiment.py  plot_multi_shape_experiment_memory.py  plot_percent_change.py
results/earwig-correct-rectangle-flops/: gemm3_rectangles.dat~
results/not-very-useful/: abstraction_check1  abstraction_check2  broken_column_pack_kernel1  chained_algorithm_results1  rather_unusual_cache_results_bigger_matrices_test1
results/throrough-experiments-2017-09-25/: gemm3-left-paren-transposing-square-vs-goto  gemm3-right-paren-one-collapsed-dimmension  gemm3-right-paren-square-vs-goto  gemm3-right-paren-square-vs-goto-parallel
src/: blis_types.rs  lib.rs  test_driver.rs  triple_loop.rs  util.rs
src/algorithms/: hsw.rs  mod.rs
src/composables/: barrier.rs  force.rs  fused_pack.rs  gemm3.rs  mod.rs  pack.rs  panel_transposing.rs  parallel_range.rs  part.rs  spawn.rs  triple_loop.rs  unpack.rs
src/exper/: framework_overhead.rs  gemm3.rs  gemm3_ab_bc_kernel.rs  gemm3_ab_check.rs  gemm3_kc_impact.rs  gemm3_parallel.rs  gemm3_rectangles.rs  gemm4_right_assoc.rs
src/kern/: kernel_mn.rs  kernel_nm.rs  kernel_nm_packing_b.rs  kernel_xsmm.rs  mod.rs  ukernel.rs  ukernel_wrapper.rs
src/kern/hsw/: gemv_al1.rs  kernel_mn.rs  kernel_nm.rs  ukernel.rs
src/matrix/: column_panel.rs  general_stride.rs  hierarch.rs  matrix.rs  metadata_only.rs  mod.rs  row_panel.rs  subcomputation.rs  void.rs
thesis/: blis-figure-stock.tex  blis-picture.tex  cites.bib  gemm3-picture.tex  libgemmpicture.tex  macrokernel-picture.tex  slides.tex  thesis.tex
