[package]
name = "momms"
version = "0.2.0"
authors = ["Tyler Smith <tms@cs.utexas.edu>"]
build = "build.rs"

[dependencies]
rand = "0.3"
libc = "0.2.0"
typenum = "1.3.1"
thread_local = "0.2.6"
hwloc = "0.3.0"
threadpool = "1.3.2"
clippy = {version = "*", optional = true}

[profile.release]
lto = true

[lib]
name = "momms"
path = "src/lib.rs"

[[bin]]
name = "gemm3"
path = "src/exper/gemm3.rs"

[features]
blis = []
hsw = []
snb = []
asm_snippets = []
libxsmm = []
default = []
