[package]
name = "momms"
version = "0.3.0"
authors = ["Tyler Smith <tms@cs.utexas.edu>"]
build = "build.rs"

[build-dependencies]
bindgen = "0.33.0"

[dependencies]
rand = "0.4.2"
libc = "0.2.0"
typenum = "1.3.1"
thread_local = "0.3.5"
hwloc = "0.5.0"
threadpool = "1.3.2"
clippy = {version = "*", optional = true}

[profile.release]
lto = true

[lib]
name = "momms"
path = "src/lib.rs"

[[bin]]
name = "exper_gemm3"
path = "src/exper/gemm3.rs"

[[bin]]
name = "exper_gemm3_rectangles"
path = "src/exper/gemm3_rectangles.rs"

[[bin]]
name = "exper_gemm3_parallel"
path = "src/exper/gemm3_parallel.rs"

# [[bin]] # commented out since this algorithm sucked
# name = "exper_gemm3_ab_check"
# path = "src/exper/gemm3_ab_check.rs"

[[bin]]
name = "exper_gemm3_ab_bc_kernel"
path = "src/exper/gemm3_ab_bc_kernel.rs"

[[bin]]
name = "exper_gemm4_right_assoc"
path = "src/exper/gemm4_right_assoc.rs"

[[bin]] # Doesn't compile atm, and I need to write
name = "exper_framework_overhead"
path = "src/exper/framework_overhead.rs"

[[bin]]
name = "exper_gemm3_kc_impact"
path = "src/exper/gemm3_kc_impact.rs"

[[bin]]
name = "exper_l3"
path = "src/exper/l3.rs"

[[bin]]
name = "exper_l3_shapes"
path = "src/exper/l3_shapes.rs"

[[bin]]
name = "exper_l3_packing"
path = "src/exper/l3_packing.rs"

[[bin]]
name = "exper_l4"
path = "src/exper/l4.rs"

[[bin]]
name = "exper_l4_packing"
path = "src/exper/l4_packing.rs"

[[bin]]
name = "exper_out_of_core"
path = "src/exper/out_of_core.rs"

[[bin]]
name = "overlap"
path = "src/exper/overlap.rs"

[features]
blis = []
hsw = []
snb = []
asm_snippets = []
libxsmm = []
default = []
